Added some test cases
Added some test cases

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/ac269f9
 UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/c4d24936-bae4-4a7d-947e-8df0c0c06030.vsidx
 UnitConversionApplication/.vs/UnitConversionApplication/v17/TestStore/0/000.testlog
 /UnitConversionApplication/UnitConversion.Test/obj
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/008511d8-d377-4e1f-b173-f2c1e9b0fc77.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/4e92d35b-cf76-43b5-9d60-d75119990656.vsidx
