Added unit test case

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ UnitConversionApplication/.vs/UnitConversionApplication/v17/TestStore/0/000.test
 /UnitConversionApplication/UnitConversion.Test/obj
 UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/008511d8-d377-4e1f-b173-f2c1e9b0fc77.vsidx
 UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/4e92d35b-cf76-43b5-9d60-d75119990656.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/v17/TestStore/0/005.testlog
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/ce6e15a3-1c52-4b12-a806-b35055647a4e.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/b4e6a4fd-510f-4622-b78d-6777f2f52495.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/a71ffe1d-c9f9-4197-bc83-4fa591aa3041.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/979295c6-b5e4-4f98-befe-4ac4eacbe56c.vsidx
+UnitConversionApplication/.vs/UnitConversionApplication/FileContentIndex/392f75d4-c30c-4eee-ba19-04f671960030.vsidx
